import "google/protobuf/descriptor.proto";
import "common.proto";
import "topic.proto";
package atlas.content;

option java_package = "org.atlasapi.serialization.protobuf";
option java_outer_classname = "ContentProtos";
option optimize_for = SPEED;

enum Column {
    IDENT = 0;
    DESC = 1;
    BROADCASTS = 2;
    LOCATIONS = 3;
    CHILDREN = 4;
    PEOPLE = 5;
    CLIPS = 6;
    KEYPHRASES = 7;
    TOPICS = 8;
    LINKS = 9;
    GROUPS = 10;
    SEGMENTS = 11;
    SECONDARY = 12;
    CHILD_UPDATED = 13;
    TYPE = 14;
    SOURCE = 15;
    UPCOMING_CONTENT = 16;
    AVAILABLE_CONTENT = 17;
    ITEM_SUMMARIES = 18;
    ACTIVELY_PUBLISHED = 19;
    GENERIC_DESCRIPTION=20;
    CONTAINER_SUMMARY=21;
    CONTAINER_REF=22;
    SERIES_REF=23;
}

extend google.protobuf.FieldOptions {
  Column column = 50002;
}

message Content {
    int64 id = 1 [(column)=IDENT];
    repeated common.Alias aliases = 49 [(column)=IDENT];
    repeated common.Reference equivs = 50 [(column)=IDENT];
    common.DateTime first_seen = 51 [(column)=IDENT];
    common.DateTime last_updated = 52 [(column)=IDENT];
    string uri = 53 [(column)=IDENT];
    common.Reference container_ref = 8 [(column)=CONTAINER_REF];
    common.Reference series_ref = 9 [(column)=SERIES_REF];
    bool schedule_only = 42 [(column)=IDENT];

    string source = 47 [(column)=SOURCE];

    string type = 48 [(column)=TYPE];

    common.DateTime child_last_updated = 46 [(column)=CHILD_UPDATED];

    repeated common.LocaleString titles = 2 [(column)=DESC];
    string description = 38 [(column)=DESC];
    repeated Synopsis synopses = 3 [(column)=DESC];
    string image = 40 [(column)=DESC];
    string thumb = 41 [(column)=DESC];
    repeated common.Image images = 4 [(column)=DESC];
    string media_type = 5 [(column)=DESC];
    string specialization = 6 [(column)=DESC];
    string sort_key = 7 [(column)=DESC];

    repeated common.Reference children = 10  [(column)=CHILDREN];
    repeated ItemAndBroadcastRef upcoming_content = 55  [(column)=UPCOMING_CONTENT];
    repeated ItemAndLocationSummary available_content = 56  [(column)=AVAILABLE_CONTENT];
    repeated common.Reference secondaries = 45 [(column)=SECONDARY];
    repeated Version deprecated_versions = 11;
    repeated Broadcast broadcasts = 12 [(column)=BROADCASTS];
    repeated Encoding encodings = 13  [(column)=LOCATIONS];

    int32 series_number = 16 [(column)=DESC];
    int32 episode_number = 17 [(column)=DESC];
    int32 part_number = 18 [(column)=DESC];
    int32 total_episodes = 19 [(column)=DESC];
    bool longform = 20 [(column)=DESC];
    bool black_and_white = 21 [(column)=DESC];
    string presentation_channel = 23 [(column)=DESC];
    repeated string countries = 22 [(column)=DESC];
    int32 year = 30 [(column)=DESC];
    repeated string language = 31 [(column)=DESC];
    string isrc = 35 [(column)=DESC];
    int64 duration = 36 [(column)=DESC];
    repeated string genres = 39 [(column)=DESC];
    Summary container_summary = 43 [(column)=CONTAINER_SUMMARY];
    string website_url = 44 [(column)=DESC];
    double priority = 61 [(column)=DESC];
    Priority priorities = 66 [(column) = DESC];

    repeated Content clips = 24 [(column)=CLIPS];
    repeated KeyPhrase key_phrases = 25 [(column)=KEYPHRASES];
    repeated common.RelatedLink related_link = 26 [(column)=LINKS];
    repeated TopicRef topic_refs = 27  [(column)=TOPICS];
    repeated common.Reference content_groups = 29 [(column)=GROUPS];
    repeated CrewMember crew_members = 28  [(column)=PEOPLE];
    repeated common.Certificate certificates = 32 [(column)=DESC];
    repeated Subtitle subtitles = 33  [(column)=DESC];
    repeated ReleaseDate release_dates = 34 [(column)=DESC];
    repeated SegmentEvent segment_events = 37 [(column)=SEGMENTS];
    repeated Restriction restrictions = 60 [(column)=DESC];
    repeated ItemSummary itemSummaries = 62 [(column)=ITEM_SUMMARIES];
    repeated int32 releaseYears = 63 [(column)=DESC];
    bool activelyPublished = 64 [(column)=ACTIVELY_PUBLISHED];
    bool genericDescription = 65 [(column)=GENERIC_DESCRIPTION];
    repeated EventRef event_refs = 67 [(column)=DESC];
    repeated common.Award awards = 68 [(column)=DESC];
    repeated common.Rating ratings = 69 [(column)=DESC];
    repeated common.Review reviews = 70 [(column)=DESC];

    bool special = 71 [(column)=DESC];
}

message Restriction {
    bool restricted = 1;
    int32 minimum_age = 2;
    string restriction_message = 3;
    string authority = 4;
    string rating = 5;
}

message Priority {
    double score = 1;
    repeated string reasons = 2 [deprecated = true];
    repeated string positive_reasons = 3;
    repeated string negative_reasons = 4;
}

message Summary {
    string type = 1;
    string title = 2;
    string description = 3;
    int32 series_number = 4;
    int32 total_episodes = 5;
}

message ItemAndBroadcastRef {
    common.Reference item = 1;
    repeated common.BroadcastRef broadcast = 2;
}

message ItemAndLocationSummary {
    common.Reference item = 1;
    repeated common.LocationSummary location_summary = 2;
}


message Broadcast {
    common.Identification identification = 1;
    common.DateTime transmission_time = 2;
    common.DateTime transmission_end_time = 3;
    common.Reference channel = 4;
    common.DateTime schedule_date = 5;
    string source_id = 19;
    string version = 17;
    bool actively_published = 6;
    bool repeat = 7;
    bool subtitled = 8;
    bool signed = 9;
    bool audio_described = 10;
    bool high_definition = 11;
    bool widescreen = 12;
    bool surround = 13;
    bool live = 14;
    bool new_series = 15;
    bool premiere = 16;
    string channel_uri = 18;
    bool is_three_d = 20;
    BlackoutRestriction blackout_restriction = 21;
    bool new_episode = 22;
    bool revised_repeat = 23;
    bool continuation = 24;
    bool new_one_off = 25;
}

message BlackoutRestriction {
    bool all = 1;
}

message Encoding {
    repeated Location location = 1;
    string version = 20;
    string video_coding = 2;
    string audio_coding = 3;
    int32 bit_rate = 4;
    int32 audio_bit_rate = 5;
    int32 video_bit_rate = 6;
    string video_aspect_ratio = 7;
    float video_frame_rate = 8;
    int32 audio_channels = 9;
    string data_container_format = 10;
    int64 data_size = 12;
    string distributor = 11;
    bool has_dog = 13;
    string source = 14;
    int32 video_horizontal_size = 15;
    bool video_progressive_scan = 16;
    int32 video_vertical_size = 17;
    bool contains_advertising = 18;
    int32 advertising_duration = 19;
    bool is_three_d = 21;
    string quality = 22;
    string quality_detail = 23;
    int64 duration = 24;
}

message Location {
    string uri = 1;
    common.DateTime availability_start = 2;
    common.DateTime availability_end = 3;
    int32 availability_length = 17;
    string transport_type = 4;
    repeated string available_countries = 5;
    string revenue_contract = 6;
    string transport_sub_type = 7;
    int32 amount = 8;
    string currency = 9;
    string network = 10;
    string platform = 11;
    bool transport_is_live = 12;
    string embed_code = 13;
    string embed_id = 14;
    common.DateTime actual_availability_start = 15;
    common.DateTime drm_playable_from = 16;
    int64 service_id = 18;
    int64 player_id = 19;
    repeated string subscription_packages = 20;
    repeated common.Alias aliases = 21 [(column)=IDENT];
    repeated Pricing pricing = 22;
}

message Pricing {
    int32 amount = 1;
    string currency = 2;
    common.DateTime start = 3;
    common.DateTime end = 4;
}

message SegmentEvent {
    string segment = 10;
    SegmentRef segmentRef = 11;
    string version = 9;
    string uri = 1;
    int32 position = 2;
    int64 offset = 3;
    bool chapter = 4;
    string title = 5;
    string description = 6;
    string image = 7;
    string thumbnail = 8;
}

message SegmentRef {
    int64 segmentRef = 1;
    string source = 2;
}

message Synopsis {
    string short = 1;
    string medium = 2;
    string long = 3;
    string locale = 4;
}

//Deprecated
message Version {
    string id = 1;
    int32 published_duration = 2;
    int32 duration = 3;
    bool restricted = 4;
    int32 minimum_age = 5;
    string restriction_message = 6;
    bool is_three_d = 7;
}

message KeyPhrase {
    string phrase = 1;
    double weighting = 2;
}

message CrewMember {
    string uri = 1;
    string name = 3;
    repeated string profile_links = 2;
    string role = 4;
    string character = 5;
}

message Subtitle {
    string language = 1;
}

message ReleaseDate {
    common.DateTime date = 1;
    string country = 2;
    string type = 3;
}

message TopicRef {
    topic.Topic topic = 1;
    float weighting = 2;
    bool supervised = 3;
    string relationship = 4;
    int32 offset = 5;
}

message ItemSummary {
    string type = 1;
    common.Reference itemRef = 2;
    string title = 3;
    string description = 4;
    string image = 5;
    int32 episode_number = 6;
    int32 releaseYear = 7;
    repeated common.Certificate certificates = 8;
}

message EventRef {
    string id = 1;
    string source = 2;
}

